syntax = "proto3";

option csharp_namespace = "BBI.Common.Protobuf.PluginHost";

package BBI.Protobuf.Hosts;

import "PluginMessages.proto";

service CIPluginHost {
    rpc Register(BBI.Protobuf.PluginRegistration) returns (BBI.Protobuf.PluginRegistrationReply) {}
}